# quantum

./: .gitignore  CMakeLists.txt  OPTIMIZE.md  README.md  gates.py  grover.py  hash.py  log.md  main.py  program_state.py  pyproject.toml  research-plan.md  system.py  telemetry.py  test.py  test2.py  test_multi_qubit.py  todo.md  utils.py
benchmarks/: cases.py  compare.py  compare_report.py  generate_advanced_circuits.py  generate_circuits.py  generate_expected.py  heatmap.py  ir.py  plot.py  run.py  run_aer.py  trace.py
benchmarks/backends/: __init__.py  aer_adapter.py  base.py  native_adapter.py  qsim_adapter.py
benchmarks/cases/: __init__.py  adaptive_feedback.py  bell_state.py  extended_sweeps.py  ghz_state.py  phase_ladder.py  qasm_loader.py  qft.py  real_grovers.py  simple_grovers.py  synthetic_expanded.py  teleportation.py  toffoli_oracle.py
benchmarks/circuits/: adaptive_scaled_3q_80r.qasm  adaptive_scaled_4q_60r.qasm  adaptive_scaled_6q_40r.qasm  bernstein_vazirani_10.qasm  bernstein_vazirani_12.qasm  bernstein_vazirani_14.qasm  bernstein_vazirani_16.qasm  bernstein_vazirani_18.qasm  bernstein_vazirani_20.qasm  bernstein_vazirani_22.qasm  bernstein_vazirani_24.qasm  bernstein_vazirani_4.qasm  bernstein_vazirani_6.qasm  bernstein_vazirani_8.qasm  brickwork_entangler_rt_12.qasm  brickwork_entangler_rt_16.qasm  brickwork_entangler_rt_20.qasm  brickwork_entangler_rt_24.qasm  brickwork_entangler_rt_8.qasm  clifford_scrambler_rt_12.qasm  clifford_scrambler_rt_16.qasm  clifford_scrambler_rt_20.qasm  clifford_scrambler_rt_24.qasm  clifford_scrambler_rt_8.qasm  clifford_t_12.qasm  clifford_t_16.qasm  clifford_t_20.qasm  clifford_t_24.qasm  clifford_t_28.qasm  clifford_t_8.qasm  conditional_rotation_3.qasm  conditional_rotation_4.qasm  conditional_rotation_5.qasm  conditional_rotation_6.qasm  deutsch_jozsa_10.qasm  deutsch_jozsa_12.qasm  deutsch_jozsa_14.qasm  deutsch_jozsa_16.qasm  deutsch_jozsa_18.qasm  deutsch_jozsa_20.qasm  (+185 more)
benchmarks/expected/: adaptive_scaled_6q_40r.json  bernstein_vazirani_10.json  bernstein_vazirani_12.json  bernstein_vazirani_14.json  bernstein_vazirani_16.json  bernstein_vazirani_18.json  bernstein_vazirani_20.json  bernstein_vazirani_22.json  bernstein_vazirani_24.json  bernstein_vazirani_4.json  bernstein_vazirani_6.json  bernstein_vazirani_8.json  brickwork_entangler_rt_16.json  clifford_t_12.json  clifford_t_8.json  conditional_rotation_4.json  conditional_rotation_5.json  deutsch_jozsa_10.json  deutsch_jozsa_12.json  deutsch_jozsa_14.json  deutsch_jozsa_16.json  deutsch_jozsa_18.json  deutsch_jozsa_20.json  deutsch_jozsa_22.json  deutsch_jozsa_4.json  deutsch_jozsa_6.json  deutsch_jozsa_8.json  entangled_perturbation_12.json  entangled_perturbation_16.json  entangled_perturbation_20.json  entangled_perturbation_24.json  entangled_perturbation_28.json  entangled_perturbation_30.json  ghz_12.json  ghz_16.json  ghz_20.json  ghz_24.json  ghz_4.json  ghz_8.json  graph_state_4.json  (+95 more)
benchmarks/results/: 2026-02-10T123939.jsonl  2026-02-10T140828.jsonl  2026-02-10T151255.jsonl  2026-02-10T155448.jsonl  2026-02-10T165946.jsonl  2026-02-10T171139.jsonl  2026-02-11T110440.jsonl  2026-02-11T110440.summary.json  2026-02-11T112001.jsonl  2026-02-11T112001.summary.json  2026-02-11T120633.jsonl  2026-02-11T120633.summary.json  2026-02-11T121400.jsonl  2026-02-11T121400.summary.json  2026-02-11T123551.jsonl  2026-02-11T123551.summary.json  2026-02-11T124030.jsonl  2026-02-11T124030.summary.json  2026-02-11T125047.jsonl  2026-02-11T125047.summary.json  2026-02-11T125205.jsonl  2026-02-11T125205.summary.json  2026-02-11T125300.jsonl  (+289 more)
docs/: 01-baseline-profile.md  02-attempt-history.md  03-findings.md  04-roadmap.md  05-experiment-local-permutation.md  06-assessment-hypotheses-2026-02-11.md  07-design-h0-terminal-sampling.md  08-design-h1-dynamic-branch-engine.md  09-design-sota-comparison-harness.md  10-hypotheses-post-sota-2026-02-11.md  11-design-h3-compiled-dynamic-graph.md  README.md  baseline-profile.md  experiment-log.md  next-hypothesis-2026-02-11-local-permutation.md  optimization-progress-2026-02-10.md  optimization-progress-core6-single-panel-data.md  plan-unify-runners.md  progress-data-core.md  progress-data.md  research-findings.md  research-plan.md
examples/: real_grovers.py  simple_grovers.py  trivial.py
native/: CMakeLists.txt
native/src/: py_module.cpp  runtime.hpp  runtime.mm  shaders.metal
quantum/: __init__.py  gates.py  quantum_gates.py  system.py
scripts/: plot_progress.py
tests/: test_compiled_static_api.py  test_native_compile_isolation.py
(+9 files in other folders)
