[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13",
]
build-backend = "scikit_build_core.build"

[project]
name = "quantum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "rich>=14.2.0",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "qiskit-aer>=0.17.2",
]

[project.scripts]
bench = "benchmarks.run:main"
bench-trace = "benchmarks.trace:main"
bench-heatmap = "benchmarks.heatmap:main"

[tool.scikit-build]
minimum-version = "0.10"
cmake.version = ">=3.27"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/quantum", "benchmarks"]
wheel.py-api = "cp313"

[tool.scikit-build.cmake.define]
CMAKE_OSX_DEPLOYMENT_TARGET = "13.0"

[tool.basedpyright]
reportUnknownMemberType = false

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
]
compare = [
    "qiskit>=1.3.0",
    "qiskit-aer>=0.16.0",
]
